Add APIService unit tests
